[gd_scene load_steps=20 format=2]

[ext_resource path="res://src/main/world/environment/restaurant/chef-camera-mover.gd" type="Script" id=1]
[ext_resource path="res://src/main/world/environment/restaurant/RestaurantPuzzleScene.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/main/puzzle/chef-view.gd" type="Script" id=3]
[ext_resource path="res://src/main/puzzle/restaurant-view.gd" type="Script" id=4]
[ext_resource path="res://src/main/puzzle/customer-view.gd" type="Script" id=5]
[ext_resource path="res://assets/main/puzzle/chef-view-outline.png" type="Texture" id=6]
[ext_resource path="res://assets/main/puzzle/customer-view-mask.png" type="Texture" id=7]
[ext_resource path="res://assets/main/puzzle/customer-view-outline.png" type="Texture" id=8]
[ext_resource path="res://src/main/world/environment/restaurant/customer-camera-mover.gd" type="Script" id=9]
[ext_resource path="res://src/main/world/environment/restaurant/RestaurantNametagPanel.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/main/world/environment/restaurant/LayoutContainer.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/main/world/environment/restaurant/hello-timer.gd" type="Script" id=12]
[ext_resource path="res://src/main/world/OverworldBg.tscn" type="PackedScene" id=13]

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CustomerCameraMover:headroom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CustomerView/Viewport/Camera2D:zoom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.18, 0.18 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "fat-se"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("CustomerView/Viewport/Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4, 10 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.18, 0.18 ), Vector2( 0.18, 0.18 ), Vector2( 0.25, 0.25 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CustomerCameraMover:headroom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ChefView/Viewport/Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.18, 0.18 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ChefCameraMover:headroom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "fat-se"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("ChefView/Viewport/Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4, 10 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.18, 0.18 ), Vector2( 0.18, 0.18 ), Vector2( 0.4, 0.4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ChefCameraMover:headroom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="StyleBoxFlat" id=3]
resource_local_to_scene = true
bg_color = Color( 0.172549, 0.666667, 0.32549, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=4]
resource_local_to_scene = true
bg_color = Color( 0.172549, 0.666667, 0.32549, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[node name="RestaurantView" type="Control"]
script = ExtResource( 4 )

[node name="RestaurantViewport" type="Viewport" parent="."]
size = Vector2( 1, 1 )
handle_input_locally = false
usage = 0
render_target_update_mode = 3

[node name="Scene" parent="RestaurantViewport" instance=ExtResource( 2 )]

[node name="CustomerClip" type="Light2D" parent="."]
position = Vector2( 179.832, 444.757 )
texture = ExtResource( 7 )
texture_scale = 0.5
mode = 3
range_item_cull_mask = 2

[node name="CustomerView" type="ViewportContainer" parent="."]
light_mask = 2
margin_left = 34.2544
margin_top = 310.109
margin_right = 324.254
margin_bottom = 580.109
stretch = true
stretch_shrink = 4
script = ExtResource( 5 )
restaurant_viewport_path = NodePath("../RestaurantViewport")

[node name="Viewport" type="Viewport" parent="CustomerView"]
size = Vector2( 72, 67 )
size_override_stretch = true
handle_input_locally = false
usage = 0
render_target_update_mode = 3
audio_listener_enable_2d = true

[node name="Bg" parent="CustomerView/Viewport" instance=ExtResource( 13 )]

[node name="Camera2D" type="Camera2D" parent="CustomerView/Viewport"]
position = Vector2( 200, 600 )
current = true
zoom = Vector2( 0.18, 0.18 )

[node name="CustomerOutline" type="TextureRect" parent="."]
self_modulate = Color( 0.254902, 0.156863, 0.117647, 1 )
margin_left = 34.2544
margin_top = 310.109
margin_right = 614.254
margin_bottom = 850.109
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="CustomerCameraMover" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/fat-se = SubResource( 1 )
script = ExtResource( 9 )
restaurant_scene_path = NodePath("../RestaurantViewport/Scene")
customer_camera_path = NodePath("../CustomerView/Viewport/Camera2D")
headroom = 0.0

[node name="ChefClip" type="Light2D" parent="."]
position = Vector2( 891.99, 225.143 )
texture = ExtResource( 7 )
texture_scale = 0.26
mode = 3
range_item_cull_mask = 4

[node name="ChefView" type="ViewportContainer" parent="."]
light_mask = 4
margin_left = 816.277
margin_top = 155.187
margin_right = 966.277
margin_bottom = 295.187
stretch = true
stretch_shrink = 4
script = ExtResource( 3 )
restaurant_viewport_path = NodePath("../RestaurantViewport")

[node name="Viewport" type="Viewport" parent="ChefView"]
size = Vector2( 37, 35 )
size_override_stretch = true
handle_input_locally = false
usage = 0
render_target_update_mode = 3

[node name="Bg" parent="ChefView/Viewport" instance=ExtResource( 13 )]

[node name="Camera2D" type="Camera2D" parent="ChefView/Viewport"]
position = Vector2( 6780, 960 )
current = true
zoom = Vector2( 0.18, 0.18 )

[node name="ChefCameraMover" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/fat-se = SubResource( 2 )
script = ExtResource( 1 )
restaurant_scene_path = NodePath("../RestaurantViewport/Scene")
chef_camera_path = NodePath("../ChefView/Viewport/Camera2D")

[node name="ChefOutline" type="TextureRect" parent="."]
self_modulate = Color( 0.254902, 0.156863, 0.117647, 1 )
margin_left = 814.661
margin_top = 153.624
margin_right = 1104.66
margin_bottom = 423.624
rect_scale = Vector2( 0.53, 0.53 )
texture = ExtResource( 6 )

[node name="CustomerNametag" parent="." instance=ExtResource( 11 )]
margin_left = 58.1141
margin_top = 499.247
margin_right = 298.114
margin_bottom = 589.247
layout = 7

[node name="Panel" parent="CustomerNametag" instance=ExtResource( 10 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -60.0
margin_top = -30.0
margin_right = 60.0
margin_bottom = 0.0
custom_styles/panel = SubResource( 3 )

[node name="RestaurantNametag" parent="." instance=ExtResource( 11 )]
margin_left = 772.0
margin_top = 277.0
margin_right = 1012.0
margin_bottom = 367.0

[node name="Panel" parent="RestaurantNametag" instance=ExtResource( 10 )]
margin_left = -60.0
margin_right = 60.0
custom_styles/panel = SubResource( 4 )

[node name="HelloTimer" type="Timer" parent="."]
one_shot = true
script = ExtResource( 12 )

[connection signal="timeout" from="HelloTimer" to="HelloTimer" method="_on_timeout"]
[connection signal="current_creature_index_changed" from="RestaurantViewport/Scene" to="." method="_on_RestaurantPuzzleScene_current_creature_index_changed"]
[connection signal="current_creature_index_changed" from="RestaurantViewport/Scene" to="CustomerCameraMover" method="_on_RestaurantPuzzleScene_current_creature_index_changed"]
[connection signal="food_eaten" from="RestaurantViewport/Scene" to="CustomerCameraMover" method="_on_RestaurantPuzzleScene_food_eaten"]
